Fixed modal exit button and added spacing under a button

--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,11 @@ a:focus {
   color: rgb(25, 67, 137);
 }
 
+.modal-header .close {
+  margin-top: -20px;
+  margin-right: -5px;
+}
+
 /* =========================================================================
                             Main Section
 =======================================================================*/
